--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -8,8 +8,8 @@
   max-width: 1350px;
   width: 100%;
   .search_container {
-    background: linear-gradient(#fff 90%, transparent 100%);
-    padding: 0 5px 20px 5px;
+    background: linear-gradient(#fff 70%, transparent 100%);
+    padding: 0 5px 40px 5px;
     position: sticky;
     top: 0;
     z-index: 3;
@@ -33,7 +33,7 @@
       @media all and (max-width: 700px) {
         width: 100%;
         &:nth-child(even) {
-          background-color: rgba(124, 112, 103, 0.2);
+          // background-color: rgba(124, 112, 103, 0.2);
         }
       }
       @media all and (min-width: 700px) {
