--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,9 +1,7 @@
-// @import url('https://fonts.googleapis.com/css?family=Roboto+Serif:400,700.css');
-// @import url('https://fonts.googleapis.com/css?family=Roboto:400,700.css');
-
 @import 'colors.less';
-.app {
-  font-family: Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;
+
+#app-root-2022-wcp .app {
+  font-family: Roboto;
   margin: auto auto;
   max-width: 1350px;
   width: 100%;
