Updates UN colours

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -43,7 +43,7 @@
         }
       }
       h3 {
-        background-color: #0077b8;
+        background-color: #009EDB;
         color: #fff;
         padding: 20px;
       }
@@ -51,7 +51,7 @@
         display: block;
         h4 {
           &:after {
-            border-bottom: 3px solid #27833a;
+            border-bottom: 3px solid #72BF44;
             content:'';
             display: block;
             width: 200px;
