--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -6,12 +6,14 @@
   max-width: 1350px;
   width: 100%;
   .search_container {
-    background: linear-gradient(#fff 70%, transparent 100%);
-    padding: 0 5px 40px 5px;
-    position: sticky;
-    top: 0;
-    z-index: 3;
+    // background: linear-gradient(#fff 70%, transparent 100%);
+    // padding: 0 0 40px 0;
+    // position: sticky;
+    // top: 0;
+    // z-index: 3;
     select {
+      font-size: 16px;
+      max-width: 600px;
       width: 100%;
     }
   }
@@ -24,34 +26,44 @@
     justify-content: space-between;
     width: 100%;
     .element_container {
+      // margin-bottom: 50px;
+      // width: calc(50%);
       box-sizing: border-box;
-      display: inline-block;
-      margin-bottom: 50px;
-      width: calc(50%);
-      @media all and (max-width: 700px) {
-        width: 100%;
-        &:nth-child(even) {
-          // background-color: rgba(124, 112, 103, 0.2);
-        }
+      display: none;
+      opacity: 0;
+      transition-duration: 1s;
+      transition-property: opacity;
+      &.element_0 {
+        display: block;
+        opacity: 1;
       }
-      @media all and (min-width: 700px) {
-        &:nth-child(even) {
-          padding: 0 5px 0 20px;
-        }
-        &:nth-child(odd) {
-          padding: 0 20px 0 5px;
-        }
-      }
+      // @media all and (max-width: 700px) {
+      //   width: 100%;
+      //   &:nth-child(even) {
+      //     // background-color: rgba(124, 112, 103, 0.2);
+      //   }
+      // }
+      // @media all and (min-width: 700px) {
+      //   &:nth-child(even) {
+      //     padding: 0 5px 0 20px;
+      //   }
+      //   &:nth-child(odd) {
+      //     padding: 0 20px 0 5px;
+      //   }
+      // }
       h3 {
-        background-color: #009EDB;
+        background-color: @unblue;
         color: #fff;
-        padding: 20px;
+        padding: 20px 10px;
+      }
+      h4 {
+        margin: 10px 0 20px 0;
       }
       .answer_yes {
         display: block;
         h4 {
           &:after {
-            border-bottom: 3px solid #72BF44;
+            border-bottom: 3px solid @unblue;
             content:'';
             display: block;
             width: 200px;
@@ -62,7 +74,7 @@
         display: block;
         h4 {
           &:after {
-            border-bottom: 3px solid #eb0045;
+            border-bottom: 3px solid @unred;
             content:'';
             display: block;
             width: 200px;
@@ -73,7 +85,7 @@
         filter: grayscale(100%);
         h4 {
           &:after {
-            border-bottom: 3px solid #7c7067;
+            border-bottom: 3px solid @ungrey;
             content:'';
             display: block;
             width: 200px;
@@ -105,8 +117,11 @@
         }
         img {
           background-color: #fff;
+          border-color: @unblue;
           border-radius: 50%;
-          border: 2px solid #009edb;
+          border-style: solid;
+          border-width: 2px;
+          box-sizing: content-box;
           display: inline-block;
           height: 0;
           margin: 2px;
