--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -2,10 +2,10 @@
 
 #app-root-2022-wcp .app {
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: auto auto;
+  margin: 40px auto;
   max-width: 1350px;
   width: 100%;
-  h2 {
+  h3 {
     background-color: @unblue;
     color: #fff;
     font-size: 26px;
