--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -5,15 +5,6 @@
   margin: 40px auto;
   max-width: 1350px;
   width: 100%;
-  h3 {
-    background-color: @unblue;
-    color: #fff;
-    font-size: 26px;
-    font-weight: 600;
-    font-weight: 600;
-    margin: 0 0 20px 0;
-    padding: 20px 10px;
-  }
   .change_question {
     // background: linear-gradient(#fff 70%, transparent 100%);
     // padding: 0 0 40px 0;
@@ -49,6 +40,7 @@
     background-color: #fff;
     box-sizing: border-box;
     margin: auto auto 40px auto;
+    padding: 0 20px;
     iframe {
       border: none;
       min-height: 300px;
@@ -74,10 +66,6 @@
       opacity: 0;
       transition-duration: 1s;
       transition-property: opacity;
-      &.element_0 {
-        display: block;
-        opacity: 1;
-      }
       // @media all and (max-width: 700px) {
       //   width: 100%;
       //   &:nth-child(even) {
