--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -41,9 +41,10 @@
     box-sizing: border-box;
     margin: auto auto 40px auto;
     padding: 0 20px;
+    max-width: 1000px;
     iframe {
       border: none;
-      min-height: 300px;
+      min-height: 400px;
       min-width: 100% !important;
       width: 0;
     }
