Updated packages and added caption

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -48,6 +48,17 @@
       min-width: 100% !important;
       width: 0;
     }
+    .caption {
+      color: rgba(0, 0.0, 0.0, 0.8);
+      font-size: 13px;
+      a {
+        color: rgba(0, 0.0, 0.0, 0.8);
+        text-decoration: underline;
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
   }
   .vis_container {
     align-items: flex-start;
